remove movable image on travel

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -26,7 +26,7 @@
                     {% component "button" label="Study Abroad" type="tertiary" %} {% endcomponent %}
                 </div>
             </div>
-        
+     <!--    
         <div class="relative w-full overflow-hidden inline-flex flex-nowrap">
         
             <div class="image-container w-max whitespace-nowrap flex items-start gap-6 animate-scroll *:w-60 *:h-60 *:object-cover *:rounded-lg">
@@ -43,7 +43,7 @@
                 <img src="{% static 'images/toronto-image.jpg' %}" class="w-60 h-60 object-cover rounded-lg">
         
             </div>
-        </div>
+        </div> -->
     </section>
     
     <!-- Stats and Partner Section -->
