prevent anonymous user from adding fav

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -153,7 +153,7 @@
     
 
     <template x-if="openLoginModal">
-        <div id="modal" class="fixed inset-0 flex items-center justify-center bg-gray-800/80 z-[1000000]">
+        <div id="login-modal" class="fixed inset-0 flex items-center justify-center bg-gray-800/80 z-[1000000]">
             <div x-data="{ isLogin:true }" class="bg-white rounded-lg w-full max-w-[400px] shadow-lg">
                 <div class="flex border-b border-gray-300 px-4 ">
                     <button @click="openLoginModal = false"class="ml-auto text-gray-600 p-2 rounded-lg hover:bg-gray-200">
