--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -83,7 +83,7 @@
                         <!-- Dropdown Menu -->
                         <ul x-show="open" x-transition 
                             class="lg:absolute right-0 mt-2 w-full lg:w-38 bg-white border border-gray-300 rounded-md shadow-lg">
-                            <li class="px-4 py-2 hover:bg-gray-100"><a href="#" class="w-full block">Settings</a></li>
+                            <!-- <li class="px-4 py-2 hover:bg-gray-100"><a href="#" class="w-full block">Settings</a></li> -->
                             <li class="px-4 py-2 hover:bg-gray-100"><a href="{% url 'listing:favourite_listings'%}" class="w-full block">Favourite Listing</a></li>
                             {%if user.user_role == 'admin'%}
                             <li class="px-4 py-2 hover:bg-gray-100"><a href="{% url 'adminv2:dashboard' %}" class="w-full block">Control Panel</a></li>
