replace sign up form with ajax

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -91,7 +91,7 @@
                             <li>
                                 <form method="POST" action="{% url 'user:logout' %}">
                                     {% csrf_token %}
-                                    <button type="submit" class="text-red-500 text-left px-4 py-2 w-full hover:bg-gray-100">Logout</button>
+                                    <button type="submit" class="cursor-pointer text-red-500 text-left px-4 py-2 w-full hover:bg-gray-100">Logout</button>
                                 </form>
                             </li>
                             
